// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-copy-to-clipboard> Component basic usage with attributes 1`] = `
<bolt-copy-to-clipboard data-attr="some attribute">
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <bolt-icon name="asset-link"
                   size="medium"
        >
        </bolt-icon>
        <span class="c-bolt-copy-to-clipboard__action-text">
          Copy Link
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <bolt-icon name="refresh"
                   size="medium"
        >
        </bolt-icon>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <bolt-icon name="check"
                   size="medium"
        >
        </bolt-icon>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component custom confirmation text 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#custom-transition"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <bolt-icon name="asset-link"
                   size="medium"
        >
        </bolt-icon>
        <span class="c-bolt-copy-to-clipboard__action-text">
          Copy Link
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <bolt-icon name="refresh"
                   size="medium"
        >
        </bolt-icon>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      Custom confirmation
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component custom transition text 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#custom-transition"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <bolt-icon name="asset-link"
                   size="medium"
        >
        </bolt-icon>
        <span class="c-bolt-copy-to-clipboard__action-text">
          Copy Link
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      Custom transition text
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <bolt-icon name="check"
                   size="medium"
        >
        </bolt-icon>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component custom trigger component 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#link-1"
    >
      <bolt-icon name="add-open"
                 background="circle"
                 size="medium"
      >
      </bolt-icon>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <bolt-icon name="refresh"
                   size="medium"
        >
        </bolt-icon>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <bolt-icon name="check"
                   size="medium"
        >
        </bolt-icon>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component custom trigger text 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#link-1"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <bolt-icon name="asset-link"
                   size="medium"
        >
        </bolt-icon>
        <span class="c-bolt-copy-to-clipboard__action-text">
          This is custom trigger text
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <bolt-icon name="refresh"
                   size="medium"
        >
        </bolt-icon>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <bolt-icon name="check"
                   size="medium"
        >
        </bolt-icon>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component custom trigger, transition, and confirmation text 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#custom-transition"
    >
      Custom trigger
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      Custom transition
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      Custom confirmation
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component multiple instances 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#link-1"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <bolt-icon name="asset-link"
                   size="medium"
        >
        </bolt-icon>
        <span class="c-bolt-copy-to-clipboard__action-text">
          Copy Link #1
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <bolt-icon name="refresh"
                   size="medium"
        >
        </bolt-icon>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <bolt-icon name="check"
                   size="medium"
        >
        </bolt-icon>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#link-2"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <bolt-icon name="asset-link"
                   size="medium"
        >
        </bolt-icon>
        <span class="c-bolt-copy-to-clipboard__action-text">
          Copy Link #2
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <bolt-icon name="refresh"
                   size="medium"
        >
        </bolt-icon>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <bolt-icon name="check"
                   size="medium"
        >
        </bolt-icon>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
`;
